//! This code was AUTOGENERATED using the codama library.
//! Please DO NOT EDIT THIS FILE, instead use visitors
//! to add features, then rerun codama to update it.
//!
//! <https://github.com/codama-idl/codama>
//!
syntax = "proto3";

package vixen.parser.jupiter_limit_order;

message CancelDustOrderIx {
	CancelDustOrderIxAccounts accounts = 1;
	CancelDustOrderIxData data = 2;
}

message CancelOrderIx {
	CancelOrderIxAccounts accounts = 1;
}

message FillOrderIx {
	FillOrderIxAccounts accounts = 1;
	FillOrderIxData data = 2;
}

message FlashFillOrderIx {
	FlashFillOrderIxAccounts accounts = 1;
	FlashFillOrderIxData data = 2;
}

message InitializeOrderIx {
	InitializeOrderIxAccounts accounts = 1;
	InitializeOrderIxData data = 2;
}

message PreFlashFillOrderIx {
	PreFlashFillOrderIxAccounts accounts = 1;
	PreFlashFillOrderIxData data = 2;
}

message UpdateFeeIx {
	UpdateFeeIxAccounts accounts = 1;
	UpdateFeeIxData data = 2;
}

message WithdrawFeeIx {
	WithdrawFeeIxAccounts accounts = 1;
}


message CancelDustOrderEvent {
	string order_key = 1;
	uint64 one_usd_input_mint_amount = 2;
}

message CancelOrderEvent {
	string order_key = 1;
}

message CreateOrderEvent {
	string order_key = 1;
	string maker = 2;
	string input_mint = 3;
	string output_mint = 4;
	string input_token_program = 5;
	string output_token_program = 6;
	uint64 making_amount = 7;
	uint64 taking_amount = 8;
	optional int64 expired_at = 9;
	uint32 fee_bps = 10;
	string fee_account = 11;
	uint32 slippage_bps = 12;
}

message TradeEvent {
	string order_key = 1;
	string taker = 2;
	uint64 remaining_making_amount = 3;
	uint64 remaining_taking_amount = 4;
	uint64 making_amount = 5;
	uint64 taking_amount = 6;
}


message Fee {
	uint32 normal_fee_bps = 1;
	uint32 stable_fee_bps = 2;
}

message Order {
	string maker = 1;
	string input_mint = 2;
	string output_mint = 3;
	string input_token_program = 4;
	string output_token_program = 5;
	string input_mint_reserve = 6;
	uint64 unique_id = 7;
	uint64 ori_making_amount = 8;
	uint64 ori_taking_amount = 9;
	uint64 making_amount = 10;
	uint64 taking_amount = 11;
	uint64 borrow_making_amount = 12;
	optional int64 expired_at = 13;
	uint32 fee_bps = 14;
	string fee_account = 15;
	int64 created_at = 16;
	int64 updated_at = 17;
	uint32 bump = 18;
	uint32 slippage_bps = 19;
}


message CancelDustOrderIxAccounts {
	string signer = 1;
	string maker = 2;
	string order = 3;
	string input_mint_reserve = 4;
	string maker_input_mint_account = 5;
	string input_mint = 6;
	string input_token_program = 7;
	string system_program = 8;
	string associated_token_program = 9;
	string event_authority = 10;
	string program = 11;
}

message CancelDustOrderIxData {
	uint64 one_usd_input_mint_amount = 1;
}

message CancelOrderIxAccounts {
	string signer = 1;
	string maker = 2;
	string order = 3;
	string input_mint_reserve = 4;
	optional string maker_input_mint_account = 5;
	string input_mint = 6;
	string input_token_program = 7;
	string event_authority = 8;
	string program = 9;
}


message FillOrderIxAccounts {
	string taker = 1;
	string maker = 2;
	string order = 3;
	string taker_input_mint_account = 4;
	string taker_output_mint_account = 5;
	optional string maker_output_mint_account = 6;
	string fee_account = 7;
	string order_input_mint_account = 8;
	string input_mint = 9;
	string input_token_program = 10;
	string output_mint = 11;
	string output_token_program = 12;
	string jupiter_program = 13;
	string system_program = 14;
	string event_authority = 15;
	string program = 16;
}

message FillOrderIxData {
	uint64 input_amount = 1;
	repeated uint32 swap_data = 2;
}

message FlashFillOrderIxAccounts {
	string taker = 1;
	string maker = 2;
	string order = 3;
	string input_mint_reserve = 4;
	optional string maker_output_mint_account = 5;
	optional string taker_output_mint_account = 6;
	string fee_account = 7;
	string input_token_program = 8;
	string output_mint = 9;
	string output_token_program = 10;
	string system_program = 11;
	string event_authority = 12;
	string program = 13;
}

message FlashFillOrderIxData {
	uint64 max_taking_amount = 1;
}

message InitializeOrderIxAccounts {
	string payer = 1;
	string maker = 2;
	string order = 3;
	string input_mint_reserve = 4;
	string maker_input_mint_account = 5;
	string fee = 6;
	optional string referral = 7;
	string input_mint = 8;
	string output_mint = 9;
	string input_token_program = 10;
	string output_token_program = 11;
	string system_program = 12;
	string associated_token_program = 13;
	string event_authority = 14;
	string program = 15;
}

message InitializeOrderIxData {
	uint64 unique_id = 1;
	uint64 making_amount = 2;
	uint64 taking_amount = 3;
	optional int64 expired_at = 4;
	optional uint32 fee_bps = 5;
	optional uint32 slippage_bps = 6;
}

message PreFlashFillOrderIxAccounts {
	string taker = 1;
	string order = 2;
	string input_mint_reserve = 3;
	string taker_input_mint_account = 4;
	string input_mint = 5;
	string input_token_program = 6;
	string instruction = 7;
}

message PreFlashFillOrderIxData {
	uint64 making_amount = 1;
}

message UpdateFeeIxAccounts {
	string admin = 1;
	string fee_authority = 2;
	string system_program = 3;
}

message UpdateFeeIxData {
	uint32 normal_fee_bps = 1;
	uint32 stable_fee_bps = 2;
}

message WithdrawFeeIxAccounts {
	string admin = 1;
	string fee_authority = 2;
	string program_fee_account = 3;
	string destination_token_account = 4;
	string token_program = 5;
	string mint = 6;
}



message ProgramState {
    oneof state_oneof {
        	Fee fee = 1;
        	Order order = 2;
        }
}

message ProgramIxs {
    oneof ix_oneof {
        	CancelDustOrderIx cancel_dust_order = 1;
        	CancelOrderIx cancel_order = 2;
        	FillOrderIx fill_order = 3;
        	FlashFillOrderIx flash_fill_order = 4;
        	InitializeOrderIx initialize_order = 5;
        	PreFlashFillOrderIx pre_flash_fill_order = 6;
        	UpdateFeeIx update_fee = 7;
        	WithdrawFeeIx withdraw_fee = 8;
        }
}

